<resources>
    <string name="app_name">APPetite</string>
    <string name="btnSignIn">Sign Out</string>
    <string name="btnMenu">Menu</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="btnNavTo">Navigate to Restaurant</string>
    <string name="btnNavToMain">Location</string>
    <string name="btnReview">Reviews</string>
    <string name="btnPromo">Promotions</string>
    <string name="btnTipCalc">$Tip Calculator</string>
    <string name="title_activity_checkin">Checkin</string>
    <string name="btnCheckin">Check-in</string>
    <string name="btnFB">Facebook</string>
    <string name="btnTwit">Twitter</string>
    <string name="checkinBanner">Want to save some sweet cash?</string>
    <string name="pageID_text">86552939404</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="contentDesc">Image of restaurant</string>
    <string name="signBonus">Upon signing up, you get 500 points! FREE!</string>
</resources>
